fixed social image alignment + added links

--- a/client/src/stylesheets/Footer.css
+++ b/client/src/stylesheets/Footer.css
@@ -50,6 +50,18 @@
   align-self: center;
 }
 
+#LinkTree {
+  margin-top: -10px;
+}
+
+#Instagram {
+  margin-top: 3px;
+}
+
+#Discord {
+  margin-top: -3px;
+}
+
 /*Mobile*/
 @media only screen and (max-width: 850px) {
   .Footer {
